kafka, end of section 1